After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 403209 - Name of a series does not show up in legend of chart if it contains "<"
Name of a series does not show up in legend of chart if it contains "<"
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
1.7.x
Other All
: Normal normal
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2007-02-01 13:39 UTC by Christian Göbel
Modified: 2007-02-06 08:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Göbel 2007-02-01 13:39:05 UTC
Using the win32 build 1.7.6. available at the Gnumeric homepage I 
experienced the following bug when generating a chart:

If the Name of a data-series contains a "<" (smaller) then the name of the series does not show up in the legend of the chart.
- This used to work with older Gnumeric versions (1.6.x versions)
- The name does however show up if it contains ">" (larger)

Expected behaviour: Whatever the name of the series is, it should always show up in the legend of a chart.

To reproduces:
1. Insert a chart (e.g. XY-plot or line)
2. add a data series
3. add a name to the series which contains "<" (e.g. "BE x<25")
4. add a legend to the chart
5. result: the name of the series does not show up in the legend

by the way:
6. if you replace "<" by a ">" the name shows up as expected. 

Thanks a lot for Gnumeric!
Christian
Comment 1 Emmanuel Pacaud 2007-02-01 13:53:37 UTC
That's because I've enabled markup for chart texts. It's nice because you can use gtk markup in order to do things like exponent or part of text in bold style.

But I agree simple text with "<" characters should be displayed correctly without manually escaped them.

That can be fixed quickly by disabling markup for user entered texts (name of series, titles...).
Comment 2 Christian Göbel 2007-02-01 14:09:21 UTC
Thanks a lot for the fast reply!

Of course it would be convenient to have some markup-available for the name of the series. 

However, I would suggest to make this optional, within the properties dialogue
and
I strongly suggest to disable it by default.
and 
I suggest to integrate some simple documentation on how that markup language works into the Gnumeric documentation. 

By the way:
How can I escape the "<" characters? I tried with  "\<" (latex-style) but that didn't work.

Comment 3 Emmanuel Pacaud 2007-02-01 14:36:30 UTC
You can use the following entities:

&amp; &lt; &gt; &quot; &apos;
Comment 4 Emmanuel Pacaud 2007-02-06 08:52:05 UTC
Fixed in CVS.

I've disabled pango markup for all user entered texts.

In the future we'll probably add a way to enter formated text. But for now, I don't want to expose the markup language to user, nor use this format for storage. (MathML would be a better format).